--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <!---FUN WITH FLAGS-->
                 <div class="flags" id="flags">
                     <div class="flags_item" data-language="es">
-                        <img class="flags_item_img" src="./assets/img/es.png" alt="flag es">
+                        <img class="flags_item_img" src="./assets/img/es.png" alt="Cambiar idioma a Español">
                     </div>
                     <div class="flags_item" data-language="en">
-                        <img class="flags_item_img" src="./assets/img/gb.png"  alt="flag en">
+                        <img class="flags_item_img" src="./assets/img/gb.png"  alt="Change language to English">
                     </div>
                 </div>
                 <!------>
@@ -58,6 +58,7 @@
                             <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
                             <li class="op"><a href="#about" data-section="nav" data-value="about"></a></li>
                             <li class="op"><a href="#contact" data-section="nav" data-value="contact"></a></li>
+                            <li><a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping fa-xl" style="color: #78261A;"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +69,7 @@
         <div class="container header-flex mb-3">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 d-flex align-items-center">
-                    <div class="header-text" data-aos="fade-down">
+                    <div class="header-text">
                         <h1 data-section="home" data-value="title"></h1>
                         <p data-section="home" data-value="subtitle"></p>
                         <button class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -80,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col d-flex align-items-center">
-                    <div class="header-img" data-aos="fade-down">
+                    <div class="header-img">
                         <img src="/assets/img/header-img.webp" alt="header">
                     </div>
                 </div>
