--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -32,16 +32,16 @@
         <div class="row he-nav d-flex justify-items-between">
             <div class="col d-flex align-items-center">
                 <div class="navbar-br">
-                    <a href="../index.html">BeautyNails</a>
+                    <a href="../index.html" aria-label="Volver al inicio">BeautyNails</a>
                 </div>
             </div>
             <!---FUN WITH FLAGS-->
             <div class="flags" id="flags">
                 <div class="flags_item" data-language="es">
-                    <img class="flags_item_img" src="../assets/img/es.png"  alt="flag es">
+                    <img class="flags_item_img" src="../assets/img/es.png"  alt="Cambiar idioma a Español">
                 </div>
                 <div class="flags_item" data-language="en">
-                    <img class="flags_item_img" src="../assets/img/gb.png"  alt="flag en">
+                    <img class="flags_item_img" src="../assets/img/gb.png"  alt="Change language to English">
                 </div>
             </div>
             <!------>
@@ -51,10 +51,11 @@
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
-                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                        <li class="op"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
+                        <li class="op"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
                         <li class="op"><a href="#" data-section="nav" data-value="about"></a></li>
                         <li class="op"><a href="#foo" data-section="nav" data-value="contact"></a></li>
+                        <li><a href="../pages/carrito.html"><i class="fa-solid fa-cart-shopping fa-xl" style="color: #78261A;"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -133,12 +134,12 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services"></a></li>
+                        <li class="light-footer op"><a href="../index.html#services" data-section="footer" data-value="services"></a></li>
                         <li class="light-footer op"><a href="../pages/productos.html" data-section="footer" data-value="products"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
                         <li class="bold-footer" data-section="footer" data-value="about"></li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials"></a></li>
+                        <li class="light-footer op"><a href="../index.html#testimonials" data-section="footer" data-value="testimonials"></a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer" data-section="footer" data-value="contact"></li>
@@ -164,8 +165,8 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html" data-section="nav" data-value="services"></a></li>
-                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials"></a></li>
+                <li class="op"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
+                <li class="op"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
                 <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
                 <li class="op"><a href="../index.html" data-section="nav" data-value="contact"></a></li>
             </ul>
