--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <!------>
-                <div class="col d-flex align-items-center justify-content-end">
+                <div class="col d-flex align-items-center justify-content-between">
                     <div class="menu"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                         <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
                     </div>
@@ -58,8 +58,10 @@
                             <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
                             <li class="op"><a href="#about" data-section="nav" data-value="about"></a></li>
                             <li class="op"><a href="#contact" data-section="nav" data-value="contact"></a></li>
-                            <li><a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping fa-xl" style="color: #78261A;"></i></a></li>
                         </ul>
+                    </div>
+                    <div>
+                        <a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping fa-xl" style="color: #78261A;"></i></a>
                     </div>
                 </div>
             </div>
