--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -15,7 +15,7 @@
     <!--Font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!----AOS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <!----Toastify-->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--Pages css-->
@@ -64,19 +64,19 @@
             <div class="col">
                 <div class="lista">
                     <div class="volver">
-                        <a href="./productos.html"><i class="fa-solid fa-arrow-rotate-left fa-lg" style="color: #78261A;">volver</i></a>
-                        <p id="carrito-vacio" class="carrito-vacio disabled">Tu carrito está vacío.</p>
+                        <a href="./productos.html"><i class="fa-solid fa-arrow-rotate-left fa-lg" style="color: #78261A;" data-section="carrito" data-value="atras"></i></a>
+                        <p id="carrito-vacio" class="carrito-vacio disabled" data-section="carrito" data-value="vacio"></p>
                     </div>
                     <div class="contenedor-carrito">
                         <div class="carrito-productos">
                             <table class="table" id="tabla-productos">
                                 <thead>
                                     <tr>
-                                        <th scope="col">Producto</th>
-                                        <th scope="col">Titulo</th>
-                                        <th scope="col">Cantidad</th>
-                                        <th scope="col">Precio</th>
-                                        <th scope="col">Subtotal</th>
+                                        <th scope="col" data-section="carrito" data-value="producto"></th>
+                                        <th scope="col" data-section="carrito" data-value="titulo"></th>
+                                        <th scope="col" data-section="carrito" data-value="cantidad"></th>
+                                        <th scope="col" data-section="carrito" data-value="precio"></th>
+                                        <th scope="col" data-section="carrito" data-value="subtotal"></th>
                                         <th scopr="col"></th>
                                     </tr>
                                 </thead>
@@ -88,14 +88,14 @@
                     </div>
                     <div id="carrito-acciones" class="carrito-acciones">
                         <div class="carrito-acciones-izquierda">
-                            <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+                            <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar" data-section="carrito" data-value="vaciar"></button>
                         </div>
                         <div class="carrito-acciones-derecha">
                             <div class="carrito-acciones-total">
                                 <p>Total:</p>
                                 <p id="total"></p>
                             </div>
-                            <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
+                            <button id="carrito-acciones-comprar" class="carrito-acciones-comprar" data-section="carrito" data-value="comprar"></button>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
             </div>
         </div>
     </footer>
-    <script src="../js/scripts.js"></script>
+    
     <script src="../js/carrito.js"></script>
     <!---toastify-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
@@ -147,5 +147,6 @@
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
