--- a/pages/productos.html
+++ b/pages/productos.html
@@ -79,19 +79,19 @@
                     <aside class="aside-carrito">
                             <ul class="menu-categorias">
                                 <li>
-                                    <p class="menu-categ-title">Categories</p>
+                                    <p class="menu-categ-title" data-section="categories" data-value="title"></p>
                                 </li>
                                 <li>
-                                    <button id="todos" class="boton-menu boton-categoria active">All</button>
+                                    <button id="todos" class="boton-menu boton-categoria active" data-section="categories" data-value="all"></button>
                                 </li>
                                 <li>
-                                    <button id="nail-polish" class="boton-menu boton-categoria">Nail Polish</button>
+                                    <button id="nail-polish" class="boton-menu boton-categoria" data-section="categories" data-value="nail"></button>
                                 </li>
                                 <li>
-                                    <button id="gel-polish" class="boton-menu boton-categoria">Gel Polish</button>
+                                    <button id="gel-polish" class="boton-menu boton-categoria" data-section="categories" data-value="gel"></button>
                                 </li>
                                 <li>
-                                    <button id="serum" class="boton-menu boton-categoria">Serum</button>
+                                    <button id="serum" class="boton-menu boton-categoria" data-section="categories" data-value="serum"></button>
                                 </li>
                             </ul>
                     </aside>
