--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
             </div>
         </div>
         <!-----Testimonials--->
-        <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center" id="testimonials">
+        <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center">
             <div class="row">
                 <div class="col">
                     <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-center" id="testimonials">
                                     <div> 
                                         <div>
                                             <p class="test-text" data-section="testimonials" data-value="first-testimonial"></p>
@@ -436,12 +436,14 @@
             <div class="offcanvas-header navbar-br">
                 <a href="#home">BeautyNails</a>
             </div>
-            <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="#services" data-section="nav" data-value="services"></a></li>
-                <li class="op"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
-                <li class="op"><a href="#about" data-section="nav" data-value="about"></a></li>
-                <li class="op"><a href="#" data-section="nav" data-value="contact"></a></li>
-            </ul>
+            <div>
+                <ul class="d-flex flex-column nav-ul-off justify-content-between">
+                    <li class="op-off"><a href="#services" data-section="nav" data-value="services"></a></li>
+                    <li class="op-off"><a href="#testimonials" data-section="nav" data-value="testimonials"></a></li>
+                    <li class="op-off"><a href="#about" data-section="nav" data-value="about"></a></li>
+                    <li class="op-off"><a href="#" data-section="nav" data-value="contact"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-----Fin Offcanvas-->
