--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -139,6 +139,23 @@
             </div>
         </div>
     </footer>
+    <!-----Offcanvas-->
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-body">
+            <div class="offcanvas-header navbar-br">
+                <a href="../index.html">BeautyNails</a>
+            </div>
+            <div>
+                <ul class="d-flex flex-column nav-ul-off justify-content-between">
+                    <li class="op-off"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
+                    <li class="op-off"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
+                    <li class="op-off"><a href="./about-me.html" data-section="nav" data-value="about"></a></li>
+                    <li class="op-off"><a href="../index.html" data-section="nav" data-value="contact"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-----Fin Offcanvas-->
     
     <script src="../js/carrito.js"></script>
     <!---toastify-->
