--- a/pages/productos.html
+++ b/pages/productos.html
@@ -147,12 +147,15 @@
             <div class="offcanvas-header navbar-br">
                 <a href="../index.html">BeautyNails</a>
             </div>
-            <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
-                <li class="op"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
-                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
-                <li class="op"><a href="#footer" data-section="nav" data-value="contact"></a></li>
-            </ul>
+            <div>
+                <ul class="d-flex flex-column nav-ul-off justify-content-between">
+                    <li class="op-off"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
+                    <li class="op-off"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
+                    <li class="op-off"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
+                    <li class="op-off"><a href="#footer" data-section="nav" data-value="contact"></a></li>
+                </ul>
+            </div>
+            
         </div>
     </div>
     <!-----Fin Offcanvas-->
