--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -53,7 +53,7 @@
                     <ul class="d-flex justify-content-between nav-ul">
                         <li class="op"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
                         <li class="op"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
-                        <li class="op"><a href="#" data-section="nav" data-value="about"></a></li>
+                        <li class="op"><a href="/pages/productos.html" data-section="nav" data-value="products"></a></li>
                         <li class="op"><a href="#foo" data-section="nav" data-value="contact"></a></li>
                     </ul>
                 </div>
@@ -139,7 +139,7 @@
                         <li class="light-footer op"><a href="../index.html#services" data-section="footer" data-value="services"></a></li>
                         <li class="light-footer op"><a href="../pages/productos.html" data-section="footer" data-value="products"></a></li>
                     </ul>
-                    <ul class="d-flex gap-3 flex-column">
+                    <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer" data-section="footer" data-value="about"></li>
                         <li class="light-footer op"><a href="../index.html#testimonials" data-section="footer" data-value="testimonials"></a></li>
                     </ul>
