--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -53,6 +53,7 @@
                         <li class="op"><a href="../index.html#services" data-section="nav" data-value="services"></a></li>
                         <li class="op"><a href="../index.html#testimonials" data-section="nav" data-value="testimonials"></a></li>
                         <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about"></a></li>
+                        <li class="op"><a href="/pages/productos.html" data-section="nav" data-value="products"></a></li>
                         <li class="op"><a href="#footer" data-section="nav" data-value="contact"></a></li>
                     </ul>
                 </div>
@@ -64,20 +65,20 @@
             <div class="col">
                 <div class="lista">
                     <div class="volver">
-                        <a href="./productos.html"><i class="fa-solid fa-arrow-rotate-left fa-lg" style="color: #78261A;" data-section="carrito" data-value="atras"></i></a>
+                        <a href="./productos.html"><i class="fa-solid fa-arrow-left fa-lg" style="color: #78261A;"></i></a>
                         <p id="carrito-vacio" class="carrito-vacio disabled" data-section="carrito" data-value="vacio"></p>
                     </div>
                     <div class="contenedor-carrito">
                         <div class="carrito-productos">
                             <table class="table" id="tabla-productos">
                                 <thead>
-                                    <tr>
+                                    <tr class="th-font">
                                         <th scope="col" data-section="carrito" data-value="producto"></th>
                                         <th scope="col" data-section="carrito" data-value="titulo"></th>
                                         <th scope="col" data-section="carrito" data-value="cantidad"></th>
                                         <th scope="col" data-section="carrito" data-value="precio"></th>
                                         <th scope="col" data-section="carrito" data-value="subtotal"></th>
-                                        <th scopr="col"></th>
+                                        <th scope="col"></th>
                                     </tr>
                                 </thead>
                                 <tbody id="carrito-productos">
@@ -116,7 +117,7 @@
                         <li class="bold-footer">links</li>
                         <li class="light-footer op"><a href="../index.html#services" data-section="footer" data-value="services"></a></li>
                     </ul>
-                    <ul class="d-flex gap-3 flex-column">
+                    <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer" data-section="footer" data-value="about"></li>
                         <li class="light-footer op"><a href="../index.html#testimonials" data-section="footer" data-value="testimonials"></a></li>
                         <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="about"></a></li>
