--- a/pages/productos.html
+++ b/pages/productos.html
@@ -118,7 +118,7 @@
                         <li class="bold-footer">links</li>
                         <li class="light-footer op"><a href="../index.html#services" data-section="footer" data-value="services"></a></li>
                     </ul>
-                    <ul class="d-flex gap-3 flex-column">
+                    <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer" data-section="footer" data-value="about"></li>
                         <li class="light-footer op"><a href="../index.html#testimonials" data-section="footer" data-value="testimonials"></a></li>
                         <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="about"></a></li>
